# laser_assembler

./: .gitignore  CMakeLists.txt  package.xml
config/: point_cloud2_assembler.params.yaml
include/laser_assembler/: base_assembler.h  base_assembler_srv.h
laser_assembler/: client.py
laser_assembler_py/: client.py
launch/: cloud_assembler_package_lidar_0.launch  cloud_assembler_package_lidar_1.launch  kinetic.launch.yaml  kinetic_cloud_assembler_lidar_0.launch  kinetic_cloud_assembler_lidar_1.launch  kinetic_cloud_assembler_lidar_seg_0.launch
scripts/: client  client.py
src/: point_cloud2_assembler.cpp
srv/: AssembleScans.srv  AssembleScans2.srv
test/: kinetic_cloud_assembler.launch  kinetic_cloud_assembler_lidar_0.launch  kinetic_cloud_assembler_lidar_1.launch
