<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>laser_assembler</name>
  
  <description>
    Provides nodes to assemble point clouds from either LaserScan or PointCloud messages
  </description>
  
  <version>1.7.7</version>
  
  <author>Vijay Pradeep</author>
  <maintainer email="jon.binney@gmail.com">Jonathan Binney</maintainer>
  
  <license>BSD</license>
  <url>http://ros.org/wiki/laser_assembler</url>
  
  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>sensor_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>message_filters</depend>
  <depend>rostest</depend>
  <depend>pluginlib</depend>

  <test_depend>amend_cmake_gtest</test_depend>test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
